--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AppMvcConnectionString": "Data Source=localhost; Initial Catalog=appmvc; User ID=root;Password=0888298168quan"
+  }
 }
